sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3: error: not found: value cocktailSort3
		cocktailSort3();
                ^AlgCocktailSort3:2: error: not found: value debut
debut +=1 
^